istio/demo/rest-client-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rest-client
spec:
  hosts:
    - '*'
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: rest-client.default.svc.cluster.local
            port:
              number: 8082
